2014-07-30  Peter Stephenson  <p.stephenson@samsung.com>

	* 32919: Doc/Zsh/tcpsys.yo Functions/TCP/tcp_output: %P
	at start of prompt in TCP function system causes standard
	%-style substitution.

	* 32918: Doc/Zsh/prompt.yo, Src/builtin.c,Src/prompt.c,
	Src/utils.c, Src/watch.c: add ability to display times with
	fractions of a second in prompts.

2014-07-28  Barton E. Schaefer  <schaefer@zsh.org>

	* 32593: Completion/Unix/Command/_qemu: update --vga option

2014-07-26  Axel Beckert  <abe@deuxchevaux.org>

	* Omari Norman: 32817: Add completion for moosic.

	* Sebastian Ramacher: 32816: Add completion for bpython and
	variants.

	* 32911: Expand bpython completion to bpython2 and bpython3.

2014-07-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 32910: Src/mkmakemod.sh: quiet update of timestamp files

2014-07-24  Barton E. Schaefer  <schaefer@zsh.org>

	* 32853: configure.ac, Src/mem.c, Src/zsh_system.h: redefine
	the VARARR() macro to use heap rather than stack allocation;
	enable old behavior via "configure --with-stack-allocation"

	* unposted (see 32892): Src/builtins.c: 'fc -I' is an error

	* 32903: Src/Modules/parameter.c: new empty (unset) elements in
	the special parameter hash tables are special themselves, so that
	adding elements via assignment syntax handles them correctly.

2014-07-24  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Functions/Zle/replace-argument, Doc/Zsh/contrib.yo:
	allow negative numeric prefix to count backwards from last
	argument.

2014-07-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Jai Keerthan: users/18981: Completion/Unix/Command/_tmux:
	improved function completion.

2014-07-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 32898 (credit Jun T.): Doc/Zsh/mod_pcre.yo: fix bug in 32891.

2014-07-23  Ansgar Burchardt  <ansgar@debian.org>

	* 32895: Completion/Unix/Command/_nm: Match more shared library
	names.

2014-07-20  Barton E. Schaefer  <schaefer@zsh.org>
